--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: any
+  shared_preferences: any
 
 
   # The following adds the Cupertino Icons font to your application.
