--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: any
   shared_preferences: any
+  go_router: 6.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
