--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: any
+ 
   shared_preferences: 2.0.20
   go_router: 6.0.2
   provider: 6.0.5
   data_table_2: ^2.0.3
-  
+  image_picker_web: ^3.0.0+1
+  dio: ^4.0.6
+  http_parser: ^4.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
